gcc/testsuite/g++.dg/ext/anon-struct4.C
// PR c++/14401

struct { struct { int& i ; } bar ; } foo ; // { dg-error "" }
